--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "author": "You!",
   "contributors": [],
   "dependencies": {
-    "deployd": "0.8.0"
+    "deployd": "^0.8.8"
   },
   "scripts": {
     "start": "node server"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm":  "2.2.x"
+    "node": "4.4.7",
+    "npm":  "2.15.8"
   },
   "license": "MIT"
 }
