--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "author": "You!",
   "contributors": [],
   "dependencies": {
-    "deployd": "^0.8.8"
+    "deployd": "0.8.8"
   },
   "scripts": {
     "start": "node server"
   },
   "engines": {
-    "node": "4.4.7",
+    "node": "6.3.0",
     "npm":  "2.15.8"
   },
   "license": "MIT"
