added npm post install for dpd keygen and dpd showkey and removed from procfile

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deployd": "^0.8.8"
   },
   "scripts": {
+	"postinstall": "dpd keygen && dpd showkey",
     "start": "node server"
   },
   "engines": {
