--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deployd": "^0.8.8"
   },
   "scripts": {
-	"postinstall": "dpd keygen && dpd showkey",
+	"heroku-postbuild": "dpd keygen && dpd showkey",
     "start": "node server"
   },
   "engines": {
