removed test collection and added birthdate to users

--- a/resources/users/config.json
+++ b/resources/users/config.json
@@ -48,6 +48,14 @@
 			"required": false,
 			"id": "country",
 			"order": 5
+		},
+		"birthDate": {
+			"name": "birthDate",
+			"type": "string",
+			"typeLabel": "string",
+			"required": true,
+			"id": "birthDate",
+			"order": 6
 		}
 	}
 }
