col invitations += houseId

--- a/resources/invitations/config.json
+++ b/resources/invitations/config.json
@@ -32,6 +32,14 @@
 			"required": true,
 			"id": "date",
 			"order": 3
+		},
+		"houseId": {
+			"name": "houseId",
+			"type": "string",
+			"typeLabel": "string",
+			"required": true,
+			"id": "houseId",
+			"order": 4
 		}
 	}
 }
